fixed sub footer and homepage card UI issue on mobile device

--- a/app/assets/stylesheets/design.scss
+++ b/app/assets/stylesheets/design.scss
@@ -620,6 +620,7 @@
             margin-bottom: 18px;
             box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
             padding: 5px;
+            width: 100%;
           }
           @media screen and (min-width: 768px) and (max-width: 1024px) {
             margin-right: 0;
@@ -1051,6 +1052,8 @@
 
     @media screen and (max-width: 767px) {
       margin: 20px 12px 20px;
+      padding: 18px 12px;
+      width: 100%;
     }
     @media screen and (min-width: 768px) and (max-width: 1024px) {
       margin: 20px 0;
